header section added with banner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header></header>
+    <header class="header">
+        <div class="hero">
+            <div class = "heroImage"><img src="/assets/Group.png" alt=""></div>
+            <div><h1 class="heroTittle priTittle">"In the near future, I hope to become a Developer."</h1></div>
+            <div class="heroDes priDes"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p></div>
+            <button class="herobtn">Contact with me</button>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
