inspiration section added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
             </div>
             
         </section>
+
+        <section class="inspiration">
+            <div class="inspireDes">
+                <h3 class="priTittle">My inspiration</h3>
+                <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="inspireVideo">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=e10WZZNPm_a916gW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        
     </main>
     <footer></footer>
 </body>
