my current section added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,32 @@
             </div>
         </section>
 
-        
+        <section class="currentTarget">
+            <div class="targetDes">
+                <h3 class="priTittle">My Current Target</h3>
+                <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="cards">
+                <div class="card cardA">
+                    <img src="assets/html.png" alt="">
+                    <h4>HTML</h4>
+                    <p >Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn more</a>
+                </div>
+                <div class="card cardB">
+                    <img src="assets/css.png" alt="">
+                    <h4>CSS</h4>
+                    <p >Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn more</a>
+                </div>
+                <div class="card cardC">
+                    <img src="assets/js.png" alt="">
+                    <h4>JavaScript</h4>
+                    <p >Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn more</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
