support section added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
                 </div>
             </div>
         </section>
+
+        <section class="support">
+            <div>
+                <h3>I need Support</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div cl>
+                <input type="text" name="" id="txt" placeholder="Suggest me any feedback for me">
+                <input id="btn" type="submit" value="Submit">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
