footer section added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="inspiration">
             <div class="inspireDes">
                 <h3 class="priTittle">My inspiration</h3>
-                <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p id="insP" class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             </div>
             <div class="inspireVideo">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=e10WZZNPm_a916gW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -106,6 +106,15 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footercontainer">
+            <div class="foottxt">An Open Commitment by Abrar Hossain</div>
+            <div class="icons">
+                <a href=""><img src="/assets/facebook.png" alt=""></a>
+                <a href=""><img src="/assets/linkedin-icon 1.png" alt=""></a>
+                <a href=""><img src="/assets/github.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
