features of buttons added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class = "heroImage"><img src="/assets/Group.png" alt=""></div>
             <div><h1 class="heroTittle priTittle">"In the near future, I hope to become a Developer."</h1></div>
             <div class="heroDes priDes"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p></div>
-            <button class="herobtn">Contact with me</button>
+            <a href="#footer"><button class="herobtn">Contact with me</button></a>
         </div>
     </header>
     <main>
@@ -106,13 +106,13 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="footercontainer">
             <div class="foottxt">An Open Commitment by Abrar Hossain</div>
             <div class="icons">
-                <a href=""><img src="/assets/facebook.png" alt=""></a>
-                <a href=""><img src="/assets/linkedin-icon 1.png" alt=""></a>
-                <a href=""><img src="/assets/github.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
+                <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
+                <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt=""></a>
             </div>
         </div>
     </footer>
