relevant text added into sections and also some features added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="hero">
             <div class = "heroImage"><img src="/assets/Group.png" alt=""></div>
             <div><h1 class="heroTittle priTittle">"In the near future, I hope to become a Developer."</h1></div>
-            <div class="heroDes priDes"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p></div>
+            <div class="heroDes priDes"><p>I aspire to learn coding, mastering HTML,CSS,JavaScript and frameworks like React, while building strong problem-solving and debugging skills.</p></div>
             <a href="#footer"><button class="herobtn">Contact with me</button></a>
         </div>
     </header>
@@ -19,14 +19,14 @@
         <section class="whyDev">
             <div class="whyDevDes">
                 <h3 class="priTittle">Why Web Development??</h3>
-                <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p class="priDes">Web development offers creativity, problem-solving, and endless learning opportunities. It connects people globally, making ideas come alive online.</p>
             </div>
             
             <div class="devcontainer">
                 <div class="devcontainer1">
                     <div class="devcontainerDes">
                         <h3>I will Do Coding and Change The World</h3>
-                        <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="priDes">With coding skills, I aim to create impactful solutions and inspire change globally.</p>
                         <button>Learn more</button>
                     </div>
                     <div>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="devcontainerDes">
                         <h3>I will help People by creating Modern Web System</h3>
-                        <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="priDes">I will build innovative web systems that enhance user experience and improve lives.</p>
                         <button>Learn more</button>
                     </div>
                     
@@ -47,7 +47,7 @@
                 <div class="devcontainer1">
                     <div class="devcontainerDes">
                         <h3>I will Do Coding and Change The World</h3>
-                        <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="priDes">I will use coding to create solutions that positively impact people's lives worldwide.</p>
                         <button>Learn more</button>
                     </div>
                     <div>
@@ -61,7 +61,7 @@
         <section class="inspiration">
             <div class="inspireDes">
                 <h3 class="priTittle">My inspiration</h3>
-                <p id="insP" class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p id="insP" class="priDes">My inspiration for coding comes from the desire to solve problems and create innovative solutions that improve people's lives and experiences.</p>
             </div>
             <div class="inspireVideo">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=e10WZZNPm_a916gW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -71,26 +71,26 @@
         <section class="currentTarget">
             <div class="targetDes">
                 <h3 class="priTittle">My Current Target</h3>
-                <p class="priDes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p class="priDes">My current target is mastering HTML, CSS, and JavaScript to build responsive websites and enhance my web development skills effectively.</p>
             </div>
             <div class="cards">
                 <div class="card cardA">
                     <img src="assets/html.png" alt="">
                     <h4>HTML</h4>
-                    <p >Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn more</a>
+                    <p>HTML structures web content, forming the backbone of every website.</p>
+                    <a href="https://www.w3schools.com/html/" target="_blank">Learn more</a>
                 </div>
                 <div class="card cardB">
                     <img src="assets/css.png" alt="">
                     <h4>CSS</h4>
-                    <p >Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn more</a>
+                    <p>CSS styles web pages, enhancing their appearance and user experience.</p>
+                    <a href="https://www.w3schools.com/css/" target="_blank">Learn more</a>
                 </div>
                 <div class="card cardC">
                     <img src="assets/js.png" alt="">
                     <h4>JavaScript</h4>
-                    <p >Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn more</a>
+                    <p>JavaScript adds interactivity and dynamic functionality to web applications.</p>
+                    <a href="https://www.w3schools.com/js/" target="_blank">Learn more</a>
                 </div>
             </div>
         </section>
@@ -98,7 +98,7 @@
         <section class="support">
             <div>
                 <h3>I need Support</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>I seek support and feedback to improve my HTML, CSS, and JavaScript development skills.</p>
             </div>
             <div cl>
                 <input type="text" name="" id="txt" placeholder="Suggest me any feedback for me">
