images name changed to small letters

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="hero">
-            <div class = "heroImage"><img src="/assets/Group.png" alt=""></div>
+            <div class = "heroImage"><img src="/assets/group.png" alt=""></div>
             <div><h1 class="heroTittle priTittle">"In the near future, I hope to become a Developer."</h1></div>
             <div class="heroDes priDes"><p>I aspire to learn coding, mastering HTML,CSS,JavaScript and frameworks like React, while building strong problem-solving and debugging skills.</p></div>
             <a href="#footer"><button class="herobtn">Contact with me</button></a>
@@ -30,12 +30,12 @@
                         <button>Learn more</button>
                     </div>
                     <div>
-                        <img class="devcontainerImg" src="/assets/Layer_1.png" alt="">
+                        <img class="devcontainerImg" src="/assets/layer_1.png" alt="">
                     </div>
                 </div>
                 <div class="devcontainer1">
                     <div>
-                        <img class="devcontainerImg" src="/assets/Group 3.png" alt="">
+                        <img class="devcontainerImg" src="/assets/group3.png" alt="">
                     </div>
                     <div class="devcontainerDes">
                         <h3>I will help People by creating Modern Web System</h3>
@@ -51,7 +51,7 @@
                         <button>Learn more</button>
                     </div>
                     <div>
-                        <img class="devcontainerImg" src="/assets/Group 4.png" alt="">
+                        <img class="devcontainerImg" src="/assets/group4.png" alt="">
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
             <div class="foottxt">An Open Commitment by Abrar Hossain</div>
             <div class="icons">
                 <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
-                <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
+                <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon1.png" alt=""></a>
                 <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt=""></a>
             </div>
         </div>
